<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_launch_screen">SMARTFLAT Viewer</string>
    <string name="title_activity_main">SMARTFLAT Viewer</string>
    <string name="title_activity_settings">Application settings</string>
    <string name="app_name">SMARTFLAT Viewer</string>
    <string name="login_title">Launch protection</string>
    <string name="login_summary">Code to run the application. If the value is empty, the code will not be requested.</string>
    <string name="start_screen_first">first location in the list</string>
    <string name="start_screen_last">last open location</string>
    <string name="prefs_title">Protecting Settings</string>
    <string name="prefs_summary">Code to enter the settings mode. If the value is empty, the code will not be requested.</string>
    <string name="start_screen">Start screen</string>
    <string name="start_screen_summary">What screen to show when you start the application?</string>
    <string name="exit_title">Exit confirmation</string>
    <string name="exit_summary">Do I ask for confirmation when I try to close an application?</string>
    <string name="external_ip_title">Alternate IP</string>
    <string name="external_IP_summary">IP to connect via the Internet</string>
    <string name="error_ip_message">Unable to connect to server. The server may be disconnected from the local network or the wrong IP address of the server is specified in the application settings.</string>
    <string name="security_code_title">Security code</string>
    <string name="security_code_summary">Required for authorization when connecting to the master controller.</string>
    <string name="fire_title">Control protection</string>
    <string name="fire_summary">Code to manage secure devices. If the value is empty, the code will not be requested.</string>
    <string name="code_hint">Enter the numeric code</string>
    <string name="mobileTitle">Use mobile internet</string>
    <string name="mobileSummary">Will mobile internet be used if WiFi is not available?</string>
    <string name="title_activity_login">Enter the code:</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sign_in">ОК</string>
    <string name="action_settings">Setting</string>
    <string name="error_incorrect_password">Incorrect code</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="appName">SMARTFLAT VIEW</string>
    <string name="appVersion">Version 2.11.2</string>
    <string name="appLogoDescription">LOGO</string>
    <string name="passwordDefault">1234</string>
    <string name="indicatorPower">Power supply</string>
    <string name="indicatorBrightness">Brightness</string>
    <string name="idisDateDefault">01.01.2018 23:59</string>
    <string name="noCarrier">NO CONNECTION</string>
    <string name="idisView">View</string>
    <string name="idisSeek">Search</string>
    <string name="mediaFastBackward"><![CDATA[<<]]></string>
    <string name="mediaBackward"><![CDATA[<]]></string>
    <string name="mediaFastForward"><![CDATA[>>]]></string>
    <string name="mediaForward"><![CDATA[>]]></string>
    <string name="mediaTotal">40</string>
    <string name="mediaFirst">1</string>
    <string name="mediaLineHeader">Header</string>
    <string name="mediaTrack1">Track 1</string>
    <string name="mediaTrack2">Track 2</string>
    <string name="mediaTrack3">Track 3</string>
    <string name="mediaTrack4">Track 4</string>
    <string name="mediaTrack5">Track 5</string>
    <string name="mediaTrack6">Track 6</string>
    <string name="mediaTrack7">Track 7</string>
    <string name="mediaTrack8">Track 8</string>
    <string name="mediaTrack9">Track 9</string>
    <string name="mediaTrack10">Track 10</string>
    <string name="mediaAdd">Add</string>
    <string name="mediaReplace">Replace</string>
    <string name="navZonesList">List of zones:</string>
    <string name="mediaDivider">/</string>
    <string name="mediaClear">Clear</string>
    <string name="mediaLoad">Load</string>
    <string name="menuSettings">Settings</string>
    <string name="menuImport">Import configuration</string>
    <string name="menuExit">Exit</string>
    <string name="prefBackground">Background mode</string>
    <string name="prefBackgroundDescription">Poll server status when application is not loaded</string>
    <string name="prefWakeup">Wake up</string>
    <string name="prefWakeupDescription">New notifications can take the phone out of sleep</string>
    <string name="prefSound">Sound and vibration</string>
    <string name="prefSoundDescription">Notifications will be accompanied by a beep and vibration.</string>
    <string name="prefConnectionNotify">Breakaway Notifications</string>
    <string name="prefConnectionNotifyDescription">Do I need to generate notifications about the lack of communication with the server, or only about alarms</string>
    <string name="headerConnection">Connection</string>
    <string name="headerBackground">Notifications and background mode</string>
    <string name="headerInterface">Interface</string>
    <string name="headerSecurity">Security</string>
    <string name="sdGuard">Under guard</string>
    <string name="sdTemperature">Temperature</string>
    <string name="notiyNoCarrier">No connection to server.</string>
    <string name="notifyAlarms">Site alarms:</string>
    <string name="sdPower">Enabled</string>
    <string name="sdSpeed">Speed</string>
    <string name="sdCurtainsOpened">Curtains open</string>
    <string name="sdBrightness">Brightness</string>
    <string name="sdLocked">Locked up</string>
    <string name="sdBlock">Lock</string>
    <string name="dis_title">Design indicators</string>
    <string name="sum_dis_title">Check indicator design</string>
    <string name="import_repo_title">Import from repository</string>
    <string name="import_btn_title">Select a local file</string>
    <string name="import_link">Link</string>
    <string name="ip">192.168.1.68</string>
    <string name="port">8189</string>
</resources>