<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="start"
        android:entryValues="@array/start_screens_values"
        android:title="@string/start_screen"
        android:entries="@array/start_screens_labels"
        android:summary="@string/start_screen_summary"
        android:defaultValue="2"/>
    <CheckBoxPreference
        android:key="exit"
        android:summary="@string/exit_summary"
        android:title="@string/exit_title"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key="black"
        android:summary="Режим, при котором фон темный, а надписи светлые"
        android:title="Темный фон"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="bold"
        android:summary="Жирный шрифт в наименовании индикаторов"
        android:title="Жирные наименования"
        android:defaultValue="false"/>

    <ListPreference
        android:key="dis"
        android:entryValues="@array/dis_values"
        android:title="@string/dis_title"
        android:entries="@array/dis_labels"
        android:summary="@string/sum_dis_title"
        android:defaultValue="3"/>
    <EditTextPreference
        android:key="deltatext"
        android:summary="Смещение надписи на индикаторе"
        android:title="Смещение"
        android:text="1.0"/>


</PreferenceScreen>
