<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Import.UI.ImportActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="Roboto"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_import"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/background_light"
            android:fontFamily="Roboto"
            app:title="Импорт"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitleTextColor="@color/color1"
            app:theme="@style/ToolbarColoredBackArrow"
            app:titleTextColor="@color/colorBlack"
            app:titleTextAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
            tools:subtitleTextColor="@color/color1"
            tools:titleTextColor="@color/color1" />

    </android.support.design.widget.AppBarLayout>

        <Button
            android:id="@+id/btn_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_btn_title"
/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/import_repo_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/et_ip"
            android:layout_width="165dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/ip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="102dp"
            android:layout_height="39dp"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:ems="10"
            android:text="@string/port"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/et_ip"
            app:layout_constraintTop_toTopOf="@+id/et_ip" />

        <Button
            android:id="@+id/btn_link"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/import_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_port"
            app:layout_constraintTop_toTopOf="@+id/et_port" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/if_rv_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/import_file_note" />

</LinearLayout>